[package]
name = "crawler"
version = "0.1.0"
authors = ["koder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
url = "2.1.1"
simple-error = "*"
percent-encoding = "*"